fix broken footer donation link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>Find this content useful? <a href="https://www.patreon.com/photodemon">Support me on Patreon,</a> or consider making <a href="donate/">a one-time donation.</a></p>
+        <p>Find this content useful? <a href="https://www.patreon.com/photodemon">Support me on Patreon,</a> or consider making <a href="donate">a one-time donation.</a></p>
       </div>
     </div>
 
